fix spacing layout

--- a/src/app/frontpage/frontpage.component.css
+++ b/src/app/frontpage/frontpage.component.css
@@ -1,11 +1,11 @@
 .container {
-  max-width: 80%;
-  margin: auto;
+  max-width: 100%;
+  /*margin-left: -25px;*/
 }
 
 .featured {
-  display: flex;
-  flex-direction: row;
+  /*display: flex;
+  flex-direction: row;*/
 }
 
 #image-four {
@@ -33,7 +33,7 @@
 }
 
 #cellophane {
-  width: 425px;
+  width: 370px;
   height: 300px;
   margin-left: 20px;
   margin-top: 15px;
@@ -41,15 +41,32 @@
 }
 
 #uni {
-  width: 1140px;
+  width: 1080px;
   height: auto;
   margin-bottom: 30px;
   margin-top: 15px;
 }
 
+.featured {
 
-.featured-container {
-  width: 65%;
+  height: 33%;
+  display: flex;
+  flex-direction: column;
+}
+
+
+
+#featured-row {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.featured-image-container {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
   height: 200px;
   overflow: hidden;
   border-style: solid;
@@ -57,10 +74,15 @@
   border-width: 2px;
 }
 
-.featured {
+.featured-image {
   width: 100%;
-  max-width: auto;
+  max-width: inherit;
   height: auto;
+}
+
+.featured-info {
+  width: 100%;
+
 }
 
 p{
